# dino-jump

./: Cargo.toml  README.md
src/: lib.rs  main.rs
src/app/: mod.rs  object.rs
