[package]
name = "jump-game"
version = "0.1.0"
authors = ["Tej Babu Balireddi <tejbabu91@gmail.com>"]

[dependencies]
piston = "0.37.*"
piston2d-graphics = "*"
pistoncore-glutin_window = "*"
piston2d-opengl_graphics = "*"
piston_window = "*"
pistoncore-sdl2_window = "*"
# pistoncore-input = "0.21.*"
rand = "0.5.*"
# collision detectio libraries
nalgebra = "0.15.*"
# Choose the one you need, or both.
ncollide2d = "0.16.*"

